# soar-platform-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: routes.py
app/algos/: surveyResultsAnalyzer.py  testGetter.py
app/firebase/: companies.py  firebase.py  inPersonWorkshopManager.py  modules.py  users.py  workshopManager.py
app/firebase/surveyManager/: growthModule.py  orgCultureModule.py
app/lib/: emailnotification.py
src/: app.py  credentials.json  prestart.py  scheduler.py
src/account/: auth.py  models.py  repository.py  schemas.py  service.py  tasks.py  views.py
src/libs/repository/: abstract.py  errors.py
src/libs/service/: abstract.py
src/libs/zoom/: __init__.py  abs.py  auth.py  cli.py  dto.py  error.py
src/notification/: tasks.py  tempaltes.py
src/notification/email/: agent.py  config.py  dto.py  transport.py  utils.py
src/payment/: models.py  service.py  views.py
src/payment/whooks/: manager.py
src/payment/whooks/scripts/: delhook.py  listhook.py  mkwhook.py
src/script/: app.sh  celery.sh
src/soar/: routes.py
src/soar/algos/: surveyResultsAnalyzer.py
src/soar/firebase/: companies.py  firebase.py  inPersonWorkshopManager.py  workshopManager.py
src/soar/firebase/surveyManager/: README.md  growthModule.py
src/surveyManager/: orgCultureModule.py
src/zoom/: models.py  views.py
