[tool.poetry]
name = "soar-platform"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9.15"
Flask = "^2.1.2"
uWSGI = "^2.0.20"
Flask-Cors = "^3.0.10"
firebase-admin = "^5.2.0"
requests = "^2.28.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
Flask-Pydantic = "^0.9.0"
pytz = "^2022.1"
portalocker = "^2.4.0"
stripe = "^3.5.0"
celery = "^5.2.7"
redis = "^4.3.4"
grpcio = "1.50.0"
grpcio-status = "1.50.0"
flask-jwt-extended = "^4.4.4"

[tool.poetry.dev-dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
